# DldtDelegate

./: README.md  local.properties
app/: build.gradle
app/src/androidTest/java/com/example/tflite_delegate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: image_classification.tflite  terse_rnnt_107M_joint.tflite
app/src/main/cpp/: Application.mk  CMakeCache.txt  CMakeLists.txt  DLDTDelegate.cpp  DLDTDelegate.h  Makefile  TfLiteArrayView.h  TfLiteIntArrayView.cpp  UseDelegate.cpp  UseDelegate.h  cmake_install.cmake  native-lib.cpp
app/src/main/java/com/example/tflite_delegate/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/tflite_delegate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
